# sciware

./: .gitignore  .gitmodules  .prettierrc.json  38_IntroToHPC  CNAME  README.md  _config.yml  build-index-page-v2.mjs  build-index-page.mjs  docker-compose.yml  flatiron.css  flatiron.scss  index-v2.html  index.html  package-lock.json  sciware-landing.md  style.css  test-center.css  test.html  test2.html
00_Founding/: README.md  Slides.md  slides.html
01_Overview/: Readme.md  reveal.html  slides.html  slides.md
02_Testing/: README.md  reveal.html  slides.md
03_ToolsWorkflows/: README.md  Summary.md  intro.md  slides.html  zsh_wentzell.md
04_Debugging/: README.md  slides1.html  slides2.html  strategies.md  tools.md
05_Parallelization/: LatentParallelismNotes.txt  Readme.md  apis.md  intro.md  sdcScale.sh  slides-apis.html  slides-intro.html  slides-terms.html  subdivideCheck.py  subdivideCheckDist.py  subdivideCheckPar.py  terminology.md
06_ModernC++/: README.md  intro.md  slides.html
07_RemoteWork/: README.md  content.md  slides.html
08_Julia/: README.md  content.md  slides.html
10_EnvShell/: BasicTerms.md  EnvVarSlides.html  EnvironmentControl.md  EnvironmentVariables.md  README.md  main.md  slides-envvar.html  slides.html
12_Functions/: README.md  carpenter.html  carpenter.md  main.md  slides.html
13_Debugging/: README.md  main.md
14_TestingPackaging/: README.md  guide.html  main.md  slides.html  workshop.md
15_IntroGithub/: README.md  day1.md  day2.md  main.md  slides.html  slides1.html  slides2.html
16_EditorsVSCode/: README.md  main.md  slides.html
17_FICluster/: README.md  main.md  slides.html
18_Blender/: README.md  main.md  slides.html
19_Profiling/: .gitignore  README.md  main.md  slides.html
20_Docs/: README.md  main.md
20_Documentation/: README.md  main.md  slides.html
21_IntroGithub/: README.md  day1.md  day2.md  slides1.html  slides2.html
22_Editors/: README.md  main.md  slides.html
23_CommandLine/: README.md  main.md  slides.html
24_Types/: README.md  main.md  riemann.py  simple_example.py  slides.html
25_ModernC++/: README.md  main.md  slides.html
26_DataFormats/: README.md  main.md  slides.html
27_SummerIntro/: README.md  cmd.md  day1.html  day2.html  day3.html  day4.html  edit.md  github1.md  github2.md  vscode.md  vscode_lessonplan.md
28_CCB/: README.md  main.md  slides.html
29_CCA/: README.md  main.md  slides.html
30_CCQ/: README.md  main.md  slides.html
30_CCQ/nanobind-example/: CMakeLists.txt  README.md  pyproject.toml
30_CCQ/nanobind-example/src/example_pkg/: array_example_module.cpp  compute.py  struct_example_module.cpp  test_struct.py
30_CCQ/nanobind-example/src/examplepkg/: compute.py  examplemod.cpp
31_CodeRobots/: README.md  main.md  slides.html
32_IntroToHPC/: README.md  main.md  pi.py  slides.html
33_SummerIntro/: README.md  cmd.md  day1.html  day2.html  day3.html  day4.html  github1.md  github2.md  vscode.md  vscode_lessonplan.md
34_PyPackaging/: README.md  main.md  slides.html
34_PyPackaging/example_project_root/: .gitignore  LICENSE  README.md  pyproject.toml
34_PyPackaging/example_project_root/docs/: index.md
34_PyPackaging/example_project_root/src/SciwarePackage/: __init__.py  api.py
34_PyPackaging/example_project_root/src/SciwarePackage/util/: formatting.py
34_PyPackaging/example_project_root/src/SciwarePackage/util/enums/: mode.py  precision.py
34_PyPackaging/example_project_root/src/sciware_package/: __init__.py  api.py
34_PyPackaging/example_project_root/src/sciware_package/util/: __init__.py  formatting.py
34_PyPackaging/example_project_root/src/sciware_package/util/enums/: __init__.py  mode.py  precision.py
35_IntroToHPC/: README.md  main.md  slides.html
35_PyPackaging/demo/pre-baked-cake/autocorr/: pyproject.toml
35_PyPackaging/demo/pre-baked-cake/autocorr/src/autocorr/estimators/: __init__.py  function.py  time.py
36_ReproduciblePaper/: README.md  main.md  (+1 more)
(+228 files in other folders)
