[project]
name = "sciware_package"
version = "0.0.1"
description = "Example package for Sciware 34"
authors = [
    { name = "Jeff Soules", email = "jsoules@flatironinstitute.org" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
]

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
