[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autocorr"
dependencies = [
    "numpy",    
    "scipy",
    "celerite",
]
authors = [
    {name = "Brian Ward", email = "bward@flatironinstitute.org"},
]
description = "A collection of autocorrelation estimators for Markov chains"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["autocorrelation", "mcmc", "diagnostics"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]